<resources>
    <string name="app_name">Smart Logbook</string>
    <string name="start_fragment_label">Start Fragment</string>
    <string name="device_list_fragment_label">Device List</string>
    <string name="qr_scanner_fragment_label">QR Code Scanner</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="select_machine">Machine list</string>
    <string name="previous">Previous</string>
    <string name="cbm_string_device_name">Device name: </string>
    <string name="name">Name</string>
    <string name="token_to_activate">Token to activate the application</string>
    <string name="token_to_auth">Token to API authorization</string>
    <string name="check_token">Check Token</string>
    <string name="check_auth_token">Save Auth Token</string>
    <string name="get_token">Get Token</string>
    <string name="get_auth_token">Get Auth Token</string>
    <string name="check_android_id">Check Android ID</string>
    <string name="repair_history">Repair history</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync </string>
    <string name="action_close_app">Close App </string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="add_value">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="camera_button_bitmap_photo">Bitmap Photo</string>
    <string name="camera_button_file_provider_photo">File Provider Photo</string>
    <string name="camera_button_basic_video">Basic Video</string>
    <string name="camera_button_file_provider_video">File Provider Video</string>
    <string name="take_picture">Take Picture</string>
    <string name="authorization">API AUTHORIZATION</string>
    <string name="authentication">APP ACTIVATION</string>
</resources>